codegen/tests/failures/par_mut_resource.stderr
error: par_for_each systems cannot accept mutable resource references
 --> $DIR/par_mut_resource.rs:6:1
  |
6 | #[system(par_for_each)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
